src/objects/Stock__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Price__c</fullName>
        <label>Buy Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buying_Date__c</fullName>
        <label>Buying Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <picklist>
            <picklistValues>
                <fullName>NSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salary2</label>
        <referenceTo>Salary2__c</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Buy_Price__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>